Added bearer token auth to personal website backend
